--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,11 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Fichier des secrets
+.env
+
+# Dossiers de cache et d'environnement Python
+__pycache__/
+.venv/
+venv/
